<resources>
    <string name="app_name">Learning English</string>
    <string name="dic_scr_title">Dictionary</string>
    <string name="search_hint">Search</string>
    <string name="loading">Loading...</string>
    <string name="loading_error">Loading error!</string>
    <string name="retry">Retry</string>
    <string name="not_found">Words wasn\'t found</string>
    <string name="studied">Studied</string>
    <string name="studying">Studying</string>
    <string name="study_words_btn">Study the words</string>
    <string name="vocabulary_cards">Vocabulary cards</string>
    <string name="stop_btn">Stop</string>
</resources>
