<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:gravity="center"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/Toolbar"
        app:titleTextAppearance="@style/AppTheme.Toolbar.Title">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/AppTheme.Toolbar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/dic_scr_title" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/search_field_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_grey"
        android:orientation="vertical"
        android:padding="7dp">

        <uiview.SearchField
            android:id="@+id/search_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_field_bg"
            android:inputType="text"
            android:hint="@string/search_hint"
            android:textSize="@dimen/search_field_text_size" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/dark_grey" />


    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="100">


        <LinearLayout
            android:id="@+id/indicators_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="@dimen/indicator_layout_width"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/BaseText"
                    android:text="@string/studying" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/indicator_height">

                    <TextView
                        android:id="@+id/studying_4"
                        style="@style/IndicatorItem"
                        android:background="@drawable/orange_left_item" />

                    <View
                        android:layout_width="@dimen/indicator_divider_width"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/studying_3"
                        style="@style/IndicatorItem"
                        android:background="@drawable/orange_item" />

                    <View
                        android:layout_width="@dimen/indicator_divider_width"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/studying_2"
                        style="@style/IndicatorItem"
                        android:background="@drawable/orange_item" />

                    <View
                        android:layout_width="@dimen/indicator_divider_width"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/studying_1"
                        style="@style/IndicatorItem"
                        android:background="@drawable/orange_right_item" />

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="100" />

            <LinearLayout
                android:layout_width="@dimen/indicator_layout_width"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/BaseText"
                    android:text="@string/studied" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/indicator_height">

                    <TextView
                        android:id="@+id/studied_4"
                        style="@style/IndicatorItem"
                        android:background="@drawable/blue_left_item" />

                    <View
                        android:layout_width="@dimen/indicator_divider_width"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/studied_3"
                        style="@style/IndicatorItem"
                        android:background="@drawable/blue_item" />

                    <View
                        android:layout_width="@dimen/indicator_divider_width"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/studied_2"
                        style="@style/IndicatorItem"
                        android:background="@drawable/blue_item" />

                    <View
                        android:layout_width="@dimen/indicator_divider_width"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/studied_1"
                        style="@style/IndicatorItem"
                        android:background="@drawable/blue_right_item" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/not_found_tv"
            style="@style/BaseText"
            android:textStyle="bold"
            android:text="@string/not_found" />

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="100"
            android:divider="@color/dark_grey"
            android:scrollbarStyle="outsideInset"
            android:dividerHeight="1dp" />

        <Button
            android:id="@+id/start_btn"
            style="@style/GreenBtn"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/study_words_btn" />

    </LinearLayout>

</LinearLayout>

